# local-dev-proxy

./: .gitattributes  .gitignore  CLAUDE.md  Caddyfile  LICENSE  README.md  config.env  pyproject.toml  routes.toml  services.toml  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
Formula/: local-dev-proxy.rb
config/: caddy-bootstrap.json
layouts/: caddy.kdl  s3browser.kdl  services.kdl
packaging/: Info.plist  launcher.py  windows_launcher.py
scripts/: caddy.py  caddy.sh  minio.py  minio.sh  s3browser.py  s3browser.sh  session.py  weed.py  weed.sh
src/local_dev_proxy/: __init__.py  __main__.py  admin.py  caddy_api.py  cli.py  config.py  gui.py  log_rotation.py  macos_dock.py  process_manager.py  proxy.py  routes.py  services.py  services.toml.sample  shell_env.py  single_instance.py  state.py  status_item.py  tray.py
src/local_dev_proxy/assets/: dock-icon.icns
src/local_dev_proxy/ui/: manager.slint
tests/: conftest.py  test_config.py  test_gui_e2e.py  test_log_rotation.py  test_macos_dock.py  test_proxy.py  test_routes.py  test_services_helpers.py  test_shell_env.py  test_single_instance.py  test_state.py
tests/fixtures/: configtest.toml
