[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "local-dev-proxy"
version = "0.0.5"
description = "Local development process orchestration with a built-in reverse proxy and manager UI"
authors = [{ name = "Andrew Chen", email = "hello@andrewtheguy.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "aiohttp>=3.9.0",
  "filelock>=3.31.0",
  # Official Qt 6 Python bindings. The wheels include the cross-platform Qt
  # Widgets, model/view, and system-tray runtime used by the manager.
  "PySide6>=6.9.0,<7",
]

[project.gui-scripts]
local-dev-proxy = "local_dev_proxy.gui:run_gui"

[project.urls]
Homepage = "https://github.com/andrewtheguy/local-dev-proxy"
Repository = "https://github.com/andrewtheguy/local-dev-proxy"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-aiohttp>=1.0.0",
  "pytest-qt>=4.5.0",
  "ruff>=0.14.6",
  "basedpyright>=1.29.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/local_dev_proxy"]
# Ship bundled runtime resources (icons and sample config) inside the wheel.
artifacts = [
  "src/local_dev_proxy/assets/*",
  "src/local_dev_proxy/services.toml.sample",
]

[tool.briefcase]
project_name = "Local Dev Proxy"
bundle = "com.andrewtheguy"

[tool.briefcase.app.local-dev-proxy]
formal_name = "Local Dev Proxy"
description = "Local reverse proxy and development process manager."
long_description = "Local development process orchestration with a built-in reverse proxy and manager UI."
sources = ["src/local_dev_proxy"]
icon = "src/local_dev_proxy/assets/dock-icon"

[tool.briefcase.app.local-dev-proxy.macOS]
min_os_version = "13.0"
universal_build = false

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
qt_api = "pyside6"

[tool.pyright]
exclude = [
    ".venv", "build", "dist", ".git", "tests", "tmp",
]
reportUnknownParameterType = true
reportUninitializedInstanceVariable = true
# Disable basedpyright-specific strict rules
reportMissingTypeStubs = false
reportExplicitAny = false
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedCallResult = false
reportImplicitOverride = false
