[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "local-dev-proxy"
version = "0.0.8"
description = "Local development process orchestration with a built-in reverse proxy and manager UI"
authors = [{ name = "Andrew Chen", email = "hello@andrewtheguy.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "aiohttp>=3.9.0",
  "filelock>=3.31.0",
  # Official Qt 6 Python bindings. The wheels include the cross-platform Qt
  # Widgets, model/view, and system-tray runtime used by the manager.
  "PySide6-Essentials>=6.9.0,<7",
]

[project.gui-scripts]
local-dev-proxy = "local_dev_proxy.gui:run_gui"

[project.urls]
Homepage = "https://github.com/andrewtheguy/local-dev-proxy"
Repository = "https://github.com/andrewtheguy/local-dev-proxy"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-aiohttp>=1.0.0",
  "pytest-qt>=4.5.0",
  "PySide6>=6.9.0,<7",
  "ruff>=0.14.6",
  "basedpyright>=1.29.0",
]
packaging = [
    "cx-freeze>=8.5.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/local_dev_proxy"]
# Ship bundled runtime resources (icons and sample config) inside the wheel.
artifacts = [
  "src/local_dev_proxy/assets/*",
  "src/local_dev_proxy/services.toml.sample",
]

# Both platforms are packaged by cx_Freeze (see packaging/launcher.py): a native
# MSI on Windows (no WiX download) and a .app/DMG on macOS (no code signing).
[[tool.cxfreeze.executables]]
script = "packaging/launcher.py"
base = "gui"
target_name = "Local Dev Proxy"
# Suffix-less: cx_Freeze resolves dock-icon.ico on Windows and dock-icon.icns
# on macOS (the latter is used as the DMG volume icon).
icon = "src/local_dev_proxy/assets/dock-icon"
shortcut_name = "Local Dev Proxy"
shortcut_dir = "ProgramMenuFolder"

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "test", "unittest", "pydoc"]
# local_dev_proxy stays unzipped so its bundled data files (assets/*,
# services.toml.sample) are copied into lib/ and resolvable via
# importlib.resources at runtime.
zip_include_packages = ["*"]
zip_exclude_packages = ["local_dev_proxy"]
include_msvcr = true

[tool.cxfreeze.bdist_msi]
# Stable upgrade code so new versions replace the prior install in place.
upgrade_code = "{BF4C6AE3-061E-4BE0-9F69-66BE0C7E56F0}"
add_to_path = false
all_users = false
install_icon = "src/local_dev_proxy/assets/dock-icon.ico"

[tool.cxfreeze.bdist_mac]
bundle_name = "Local Dev Proxy"
iconfile = "src/local_dev_proxy/assets/dock-icon.icns"
# plist_items in pyproject.toml can't express tuples, so ship a full plist.
custom_info_plist = "packaging/Info.plist"

[tool.cxfreeze.bdist_dmg]
volume_label = "Local Dev Proxy"
applications_shortcut = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
qt_api = "pyside6"

[tool.pyright]
exclude = [
    ".venv", "build", "dist", ".git", "tests", "tmp",
]
reportUnknownParameterType = true
reportUninitializedInstanceVariable = true
# Disable basedpyright-specific strict rules
reportMissingTypeStubs = false
reportExplicitAny = false
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedCallResult = false
reportImplicitOverride = false
